k8s/base/stack/engine.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: engine
  labels:
    app: engine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: engine
  template:
    metadata:
      labels:
        app: engine
    spec:
      containers:
        - name: engine
          image: iteam1337/pm-engine
          imagePullPolicy: Always
          resources: {}
      restartPolicy: Always
