k8s/base/stack/extract-text-from-pic.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: extract-text-from-pic
  labels:
    app: extract-text-from-pic
spec:
  selector:
    matchLabels:
      app: extract-text-from-pic
  template:
    metadata:
      labels:
        app: extract-text-from-pic
    spec:
      containers:
        - name: extract-text-from-pic
          image: iteam1337/pm-extract-text-from-pic
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: extract-text-from-pic
  labels:
    app: extract-text-from-pic
spec:
  ports:
    - port: 4000
      targetPort: 4000
  selector:
    app: extract-text-from-pic
