k8s/base/stack/engine-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: engine-ui
spec:
  ports:
    - port: 80
  type: LoadBalancer
  selector:
    app: engine-ui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: engine-ui
spec:
  selector:
    matchLabels:
      app: engine-ui
  template:
    metadata:
      labels:
        app: engine-ui
    spec:
      containers:
        - name: engine-ui
          image: iteam1337/pm-engine-ui
          ports:
            - containerPort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: engine-ui-ingress
  annotations:
    kubernetes.io/ingress.class: "public"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - engine-ui.iteamdev.io
      secretName: engine-ui-prod-tls
  rules:
    - host: engine-ui.iteamdev.io
      http:
        paths:
          - backend:
              serviceName: engine-ui
              servicePort: 80
