k8s/base/stack/signing-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: signing-ui
spec:
  ports:
    - port: 80
  selector:
    app: signing-ui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: signing-ui
spec:
  selector:
    matchLabels:
      app: signing-ui
  template:
    metadata:
      labels:
        app: signing-ui
    spec:
      containers:
        - name: signing-ui
          image: iteam1337/pm-signing-ui
          ports:
            - containerPort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: signing-ui-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - signing-ui.iteamdev.io
      secretName: signing-ui-prod-tls
  rules:
    - host: signing-ui.iteamdev.io
      http:
        paths:
          - backend:
              serviceName: signing-ui
              servicePort: 80
